# ziya

./: .env  .gitignore  BACKEND_SYSTEM_TESTS_SUMMARY.md  CHANGELOG.md  CODE_QUALITY_REPORT.md  CONTRIBUTORS.md  DEBUG_PLAN_SUMMARY.md  DETOUR_BACKEND_DUPLICATION.md  DETOUR_FRONTEND_ABORT_RECOVERY.md  DEVELOPMENT.md  INVESTIGATION_SUMMARY.md  LICENSE  MANIFEST.in  PACKAGE_UPDATE_SUMMARY.md  PYTHON_UPDATE_SUMMARY.md  README.md  SESSION_RESUMPTION_DESIGN.md  STREAMING_DEBUG_PLAN.md  STREAMING_METRICS.md  analyze_all_failures.py  analyze_failures.py  analyze_line_diffs.py  bedrock_profile_results.json  bla.json  build-errors.txt  build_script.py  bump-version.py  categorize_failures.py  check_corruption.py  check_match.py  commands  copydiff.sh  debug_deletion.py  debug_hunk_offsets.py  debug_mre_detailed.py  debug_positions.py  difflib-test-session  eslint.config.js  known-issues.txt  mcp_config.json  (+23 more)
Docs/: AnnouncementPlan.md  ArchitectureOverview.md  AuthProviders.md  BrandGuide.md  CLITasks.md  CONTRIBUTING.md  Capabilities.md  CompetitiveAnalysis-ClaudeCode.md  DesignPhilosophy.md  Enterprise.md  EnvironmentVariables.md  EphemeralShellPrivileges.md  FeatureInventory.md  MCPSecurityControls.md  NewUser.md  README-Rewrite-Plan.md  REFACTORING_HANDOFF.md  REFACTORING_PLAN.md  SECURITY.md  SecurityPosture.md  Skills.md  ThreatModel.md  UserConfigurationFiles.md  competitive-analysis.md  delegate-bugs-analysis.md  delegate-completion-notification-design.md  delegate-streaming-and-orchestrator-design.md  delegate-system-status.md  force-directed-graphs.md  mcp-transport-concurrency-handoff.md  social-preview.html
Docs/design/: shadow-sessions.md
app/: __init__.py  cli.py  cli_card_runner.py  config.py  context.py  main.py  mcp_fixes.py  message_stop_handler.py  middleware.py  server.py  server.py.backup  streaming_tool_executor.py  task_runner.py  text_delta_processor.py  tool_execution.py  ziya_exec.py
app/agents/: .agent.py.swp  agent.py  bedrock_wrapper.py  block_executor.py  callbacks.py  compaction_engine.py  custom_message.py  delegate_manager.py  delegate_stream_relay.py  direct_bedrock.py  direct_streaming.py  models.py  nova_formatter.py  nova_wrapper.py  nova_wrapper_fix.py  parse_output.py  prompts.py  prompts_manager.py  swarm_scratch.py  swarm_tools.py  system_jobs.py  task_executor.py  task_run_stream_relay.py  task_scheduler.py  task_templating.py  until_evaluator.py
app/api/: __init__.py  beads.py  chat_with_validation.py  chats.py  commands.py  contexts.py  delegates.py  memory.py  projects.py  skills.py  task_bindings.py  task_cards.py  task_runs.py  tokens.py
app/config/: __init__.py  app_config.py  builtin_tasks.py  common_args.py  env_registry.py  environment.py  models_config.py  scope_canonical.py  shell_config.py  write_policy.py
app/data/: __init__.py  built_in_skills.py
app/extensions/: __init__.py
app/hallucination/: __init__.py  fake_shell_detector.py  fake_tool_result_detector.py  region_extraction.py  shingle_index.py
app/mcp/: builtin_tools.py  client.py  connection_pool.py  consolidated.py  cooldown.py  dynamic_tools.py  enhanced_tools.py  integration.py  manager.py  permissions.py  registry_client.py  registry_manager.py  response_validator.py  security.py  signing.py  tool_guard.py  tools.py  utils.py
app/mcp_servers/: __init__.py  shell_server.py  time_server.py  write_policy.py
app/memory/: __init__.py  comparator.py  eval.py  extractor.py  lifecycle.py  maintenance.py  organize_history.py  organizer.py  prompt.py  rem.py
app/middleware/: __init__.py  continuation.py  error_handling.py  error_middleware.py  hunk_status.py  origin_guard.py  project_context.py  request_size.py  security_headers.py  streaming.py
design/: PROVIDER_REFACTORING_PHASE_0-2_COMPLETE.md  a-poem.md  backlog-threading-refactor-bedrock-event-loop.md  bead-branching.md  codebase_analysis_2025.md  conversation-graph-tracker.md  goal-exit-conditions.md  goal-patches-bundle.md  goal-staged-by-default.md  multi-root-projects.md  newux-context.md  structured-memory-system.md  task-cards.md  task_card_project_binding.md  work-primitives-taxonomy.md
frontend/: .babelrc  .eslintrc.json  .npmcheckrc  FRONTEND.md  bundle-analysis.txt  craco.config.js  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  webpack.config.js
mcp_servers/: shell_server.py  time_server.py
scripts/: __init__.py  bedrock_performance_profiler.py  build_package.py  build_script.py  build_wheel.sh  create_wheel.py  demo_registry.py  diagnose_amazon_registry.py  fbuild.py  generate_provider_tests.py  generate_templates.py  install_typescript.py  lint_env_vars.py  mcp_live_concurrency_check.py  post_build.py  post_build_hook.py  provision_approve_key.sh  render_memory_eval_report.py  run_memory_diagnostic.py  run_memory_diagnostic_batch.py  run_memory_eval.py  run_memory_lifecycle_simulation.py  run_memory_priming.py  setup_amazon_credentials.py  test_amazon_registry.py  test_registry.py
static/: app.js  sendPayload.js  ziya.css
templates/: asset-manifest.json  index.html
tests/: INTEGRATION_SUMMARY.md  README.md  README_mermaid_tests.md  analyze_all_tests.py  cleanup_test_files.py  compare_test_results.py  conftest.py  create_mermaid_test.py  diff_regression_tests.py  execute_integration.py  fix_files_processed_counter.py  integrate_tests.sh  run_backend_system_tests.py  run_diff_tests.py  run_diff_tests_parallel.py  run_mermaid_tests.py  setup_mermaid_tests.py  strategic_integration_plan.py  test_MRE_invisible_unicode_improved.py  test_MRE_line_endings_preservation.py  test_MRE_no_diff_git_header.py  test_MRE_whitespace_preservation.py  test_agent_string_handling.py  test_all_diff_cases.py  test_api_beads.py  test_api_chats.py  test_api_chats_search.py  test_api_memory.py  test_api_smoke.py  test_api_task_bindings.py  test_api_task_cards.py  test_api_task_runs.py  test_apply_state.py  test_apply_state_additional.py  test_artifact_summary_truncation.py  test_ast_fixes.py  test_ast_format_symbol.py  test_ast_remaining_fixes.py  test_ast_system.py  test_atc_self_scan.py  (+293 more)
(+1562 files in other folders)
