[tool.poetry]
name = "ziya"
version = "0.3.9.3"
description = ""
authors = ["Dan Cohn <chroma@gmail.com>",
           "Vishnu Krishnaprasad <vishnukool@gmail.com>"]

packages = [
    { include = "app", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
whatthepatch = "^1.0.6"
packaging = "^24.0"
requests = "^2.32.0"
pydantic = "^2.10.0"
tiktoken = {version = "^0.8.0", optional = true}
boto3 = "^1.35.0"
langchain-aws = "^1.0.0"
cryptography = "^46.0.0"
pyOpenSSL = "^25.0.0"
numpy = [
    {version = ">=2.0.0,<2.3.0", python = ">=3.10,<3.12"},
    {version = "^2.3.2", python = ">=3.12,<3.15"}
]
langchain-google-genai = "^3.0.0"
google-generativeai = "^0.8.0"
langchain = "^1.0.0"
langchain-classic = "^1.0.0"
langchain-community = "^0.4.1"
langchain-text-splitters = "^1.0.0"
langgraph = "^1.0.0"
langgraph-prebuilt = "^1.0.0"
torch = {version = "^2.8.0", optional = true}
setuptools = "^75.0.0"
cssutils = "^2.11.0"
html5lib = "^1.1"
beautifulsoup4 = "^4.12.0"
pypdf = "^6.0.0"
pdfplumber = "^0.11.0"
python-docx = "^1.1.0"
openpyxl = "^3.1.0"
pandas = "^2.2.0"
python-pptx = "^1.0.0"
aiohttp = "^3.12.0"
pillow = "^11.0.0"
starlette = "^0.49.0"
watchdog = "^6.0.0"
urllib3 = "^2.5.0"
langchain-anthropic = "^1.0.0"
numba = {version = "^0.62.0", python = ">=3.10,<3.14"}
transformers = {version = "^4.0.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[tool.poetry.group.pcap.dependencies]
# Optional: Network packet analysis tools
scapy = "^2.6.0"

[tool.poetry.extras]
local = ["torch"]

[tool.poetry.scripts]
ziya = 'app.ziya_exec:ziya'
dev = 'app.ziya_exec:dev'
finstall = "app.ziya_exec:frontend_install"
fstart = "app.ziya_exec:frontend_start"
fbuild = "app.ziya_exec:frontend_build"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=42", "wheel"]
build-backend = "poetry.core.masonry.api"
