[tool.poetry]
name = "ziya"
version = "0.6.1.1"
description = "Self-hosted AI workbench for code, architecture, and operations. Rich visualizations (Graphviz, Mermaid, Vega-Lite, DrawIO), diff application with per-hunk tracking, parallel AI agents, MCP tool integration, enterprise plugin system."
authors = ["Dan Cohn <chroma@gmail.com>",
           "Vishnu Krishnaprasad <vishnukool@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ziya-ai/ziya"
repository = "https://github.com/ziya-ai/ziya"
keywords = ["ai", "llm", "coding", "architecture", "operations", "visualization", "self-hosted", "bedrock", "claude", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
]

packages = [
    { include = "app", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
fastapi = "^0.124.2"
langserve = "^0.3.0"
jinja2 = "^3.1.0"
whatthepatch = "^1.0.6"
packaging = "^24.0"
requests = "^2.32.0"
pydantic = "^2.10.0"
tiktoken = {version = "^0.8.0", optional = true}
boto3 = "^1.35.0"
cryptography = "^46.0.0"
# New Google GenAI SDK for Gemini 3 support
google-genai = "^1.7.0"
langchain-google-genai = "^2.0.0"
httpx = "^0.28.1"  # Required by google-genai, overrides older version needed by mcp-server-fetch
#langchain-core = "^0.4.0"
langchain-aws = "^1.1.0"
langchain = "^1.0.0"
langchain-community = "^0.4.1"
torch = {version = "^2.8.0", optional = true}
setuptools = ">=75.8.0"
cssutils = "^2.11.0"
html5lib = "^1.1"
tree-sitter = ">=0.21.0,<0.23"
tree-sitter-languages = ">=1.10.0"
beautifulsoup4 = "^4.12.0"
pypdf = "^6.0.0"
pdfplumber = "^0.11.0"
python-docx = "^1.1.0"
openpyxl = "^3.1.0"
pandas = "^2.2.0"
python-pptx = "^1.0.0"
aiohttp = "^3.12.0"
pillow = "^11.0.0"
starlette = ">=0.49.1"
watchdog = "^6.0.0"
urllib3 = "^2.5.0"
numba = {version = "^0.62.0", python = ">=3.10,<3.14", optional = true}
transformers = {version = "^4.0.0", optional = true}
fonttools = "^4.60.2"
mcp = "^1.23.0"
uv = "^0.9.6"
filelock = ">=3.20.1"
prompt-toolkit = "^3.0.48"
rich = "^14.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[tool.poetry.group.pcap.dependencies]
# Optional: Network packet analysis tools
scapy = ">=2.6.2"

[tool.poetry.extras]
local = ["torch"]
tokens = ["tiktoken"]
all = ["torch", "tiktoken", "numba", "transformers"]

[tool.poetry.scripts]
ziya = 'app.ziya_exec:ziya'
ziya-cli = "app.cli:main"
dev = 'app.ziya_exec:dev'
finstall = "app.ziya_exec:frontend_install"
fstart = "app.ziya_exec:frontend_start"
fbuild = "app.ziya_exec:frontend_build"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=42", "wheel"]
build-backend = "poetry.core.masonry.api"
